--- a/BrawlLib/Properties/Resources.resx
+++ b/BrawlLib/Properties/Resources.resx
@@ -117,6 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CanaryIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\BrawlCrateCanary.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Collision0x00" xml:space="preserve">
     <value>Basic</value>
     <comment>Default collision, used for many different objects</comment>
