--- a/BrawlCrate/Properties/Resources.resx
+++ b/BrawlCrate/Properties/Resources.resx
@@ -280,4 +280,22 @@
   <data name="SharedTEX0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SharedTEX0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="GCAM" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GCAM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GDBF" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GDBF.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GIB2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GIB2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GITM" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GITM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="GWAT" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GWAT.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="itembox" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\itembox.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
